--- a/citations.html
+++ b/citations.html
@@ -35,21 +35,20 @@
   </nav>
 
   <!-- reference for flexbox gallery for images from https://css-tricks.com/adaptive-photo-layout-with-flexbox/ -->
-  <section>
-    <div class="container">
-      <div class="block">
-        <div class="crop-header">
-          <img src="images/ext.jpg" alt="detailing header">
-        </div>
-        <header class="header-text">
-          <h1>Citations</h1>
-          <p> References for all sources used.</p>
-        </header>
+  <section class="container">
+    <div class="block">
+      <div class="crop-header">
+        <img src="images/ext.jpg" alt="detailing header">
       </div>
+      <header class="header-text">
+        <h1>Citations</h1>
+        <p> Sources we used.</p>
+      </header>
     </div>
   </section>
 
   <section>
+    <h2> References </h2>
     <h3> Font </h3>
     <ul>
       <li> Montserrat: Ulanovsky, J. (2017). Retrieved from <a class="link" href="https://fonts.google.com/specimen/Montserrat?preview.text_type=custom "> here </a> </li>
@@ -95,13 +94,54 @@
     </ul>
   </section>
 
-  <footer>
-      <section class = "section-divider-footer">
-        <div class="container-footer">
-          <a class="link" href="citations.html"> Citations </a>
-          <a class="link" href="index.html"> Style Guide </a>
-          <a class="link" href="https://github.com/Ajxy2/Iat-339-Team-11"> Github </a>
+  <footer class="section-divider-footer">
+    <div class="container-footer">
+      <div class="block-footer">
+        <div class="topnav">
+          <div class="topnav-left">
+            <a href="home.html">
+              <span class="auto-detailing-font-top"> AUTO
+                <span class="mobile-font-top"> MOBILE </span>
+                <span> DETAILING </span>
+              </span>
+            </a>
+          </div>
         </div>
-      </section>
+        <p> Family owned and operated since 2005, we strive to be the best Detailing service in all of Vancouver.
+        </p>
+      </div>
+
+      <div class="block-footer">
+        <h3> Navigation </h3>
+        <ul>
+          <li><a class="link" href="home.html">Home</a> </li>
+          <li><a class="link" href="services.html">Services</a> </li>
+          <li><a class="link" href="contact.html">Contact Us</a> </li>
+          <li><a class="link" href="checkout.html">Checkout</a> </li>
+        </ul>
+      </div>
+
+      <div class="block-footer">
+        <h3> Resources </h3>
+        <ul>
+          <li><a class="link" href="index.html"> Style Guide </a> </li>
+          <li><a class="link" href="citations.html"> Citations </a> </li>
+          <li><a class="link" href="https://github.com/Ajxy2/Iat-339-Team-11"> Github </a> </li>
+        </ul>
+      </div>
+
+      <div class="block-footer">
+        <h3> Newsletter Sign Up</h3>
+        <form method="post" action="#">
+          <label class="input-text-label" for="name"> Name </label>
+          <input class="input-text-contact-us" type="text" id="name" name="name">
+          <label class="input-text-label" for="email"> Email </label>
+          <input class="input-text-contact-us" type="text" id="email" name="email">
+          <div class="container-payment">
+            <input class="button-form" type="submit" value="Submit">
+          </div>
+        </form>
+      </div>
+    </div>
   </footer>
 </body>
