--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
       </div>
       <header class="header-text">
         <h1>Contact Us</h1>
-        <p>Drop us a message below. </p>
+        <p> We're all ears. </p>
       </header>
     </div>
   </section>
@@ -50,6 +50,8 @@
   <section class="container-contact-us">
     <div class="block-contact-us">
       <h2>Drop us a message</h2>
+      <h3> We're here to help </h3>
+      <p> We would love to address any inquires, questions, or concerns that you may have. Feel free to contact us using this form. We typically respond within two business days. </p>
       <h3> Question / comment is regarding: </h3>
       <form method="get" action="#">
         <input type="radio" id="ext-detail" name="type" value="ext-detail">
@@ -59,38 +61,75 @@
         <input type="radio" id="comp-updates" name="type" value="comp-updates">
         <label for="comp-updates">Company updates</label><br>
         <input type="radio" id="other" name="type" value="other">
-        <label for="other">Other</label><br>
+        <label for="other">Other</label>
       </form>
     </div>
 
     <div class="block-contact-us">
       <h3> Your details: </h3>
-      <p>Please fill out your full name, email and any question/comments </p>
+      <p> Please fill out your full name, email and any question/comments </p>
       <form method="post" action="#">
         <label class="input-text-label" for="name"> Name </label>
         <input class="input-text-contact-us" type="text" id="name" name="name">
-      </form>
-      <form method="post" action="#">
         <label class="input-text-label" for="email"> Email </label>
         <input class="input-text-contact-us" type="text" id="email" name="email">
-      </form>
-      <form method="post" action="#">
         <label class="input-text-label" for="Message"> Message </label>
         <input class="input-text-contact-us" type="text" id="Message" name="message">
+        <div class="container-payment">
+          <input class="button-form" type="submit" value="Submit">
+        </div>
       </form>
-      <div class="container-payment">
-        <input class="button-form" type="submit" value="Submit">
-      </div>
     </div>
   </section>
 
-  <footer>
-      <section class = "section-divider-footer">
-        <div class="container-footer">
-          <a class="link" href="citations.html"> Citations </a>
-          <a class="link" href="index.html"> Style Guide </a>
-          <a class="link" href="https://github.com/Ajxy2/Iat-339-Team-11"> Github </a>
+  <footer class="section-divider-footer">
+    <div class="container-footer">
+      <div class="block-footer">
+        <div class="topnav">
+          <div class="topnav-left">
+            <a href="home.html">
+              <span class="auto-detailing-font-top"> AUTO
+                <span class="mobile-font-top"> MOBILE </span>
+                <span> DETAILING </span>
+              </span>
+            </a>
+          </div>
         </div>
-      </section>
+        <p> Family owned and operated since 2005, we strive to be the best Detailing service in all of Vancouver.
+        </p>
+      </div>
+
+      <div class="block-footer">
+        <h3> Navigation </h3>
+        <ul>
+          <li><a class="link" href="home.html">Home</a> </li>
+          <li><a class="link" href="services.html">Services</a> </li>
+          <li><a class="link" href="contact.html">Contact Us</a> </li>
+          <li><a class="link" href="checkout.html">Checkout</a> </li>
+        </ul>
+      </div>
+
+      <div class="block-footer">
+        <h3> Resources </h3>
+        <ul>
+          <li><a class="link" href="index.html"> Style Guide </a> </li>
+          <li><a class="link" href="citations.html"> Citations </a> </li>
+          <li><a class="link" href="https://github.com/Ajxy2/Iat-339-Team-11"> Github </a> </li>
+        </ul>
+      </div>
+
+      <div class="block-footer">
+        <h3> Newsletter Sign Up</h3>
+        <form method="post" action="#">
+          <label class="input-text-label" for="name-footer"> Name </label>
+          <input class="input-text-contact-us" type="text" id="name-footer" name="name-footer">
+          <label class="input-text-label" for="email-footer"> Email </label>
+          <input class="input-text-contact-us" type="text" id="email-footer" name="email-footer">
+          <div class="container-payment">
+            <input class="button-form" type="submit" value="Submit">
+          </div>
+        </form>
+      </div>
+    </div>
   </footer>
 </body>
