--- a/vacuum.html
+++ b/vacuum.html
@@ -51,12 +51,12 @@
   </section>
 
   <section class="container-detailed-view">
-    <div class="block-about-us">
+    <div class="block-detailed-view">
+      <h2> What is it?</h2>
       <img src="images/int5.jpg" alt="vaccuum & shampoo wash seat">
     </div>
 
     <div class="block-detailed-view">
-      <h2> What is it?</h2>
       <p> Whether you need the hardest stains removed to cleaning up crumbs, we'll get your vechicles interior as if it was brand new. We pride ourselves with having the best Vaccuum & Shampoo service you can get.
       </p>
       <h3> Select your vehicle type: </h3>
@@ -66,7 +66,7 @@
         <input type="radio" id="car" name="type" value="car">
         <label for="car"> Sedan </label><br>
         <input type="radio" id="suv" name="type" value="suv">
-        <label for="suv"> SUV </label><br>
+        <label for="suv"> SUV / minivan </label><br>
         <input type="radio" id="truck" name="type" value="truck">
         <label for="truck"> Truck </label><br>
       </form>
@@ -75,13 +75,54 @@
     </div>
   </section>
 
-  <footer>
-      <section class = "section-divider-footer">
-        <div class="container-footer">
-          <a class="link" href="citations.html"> Citations </a>
-          <a class="link" href="index.html"> Style Guide </a>
-          <a class="link" href="https://github.com/Ajxy2/Iat-339-Team-11"> Github </a>
+  <footer class="section-divider-footer">
+    <div class="container-footer">
+      <div class="block-footer">
+        <div class="topnav">
+          <div class="topnav-left">
+            <a href="home.html">
+              <span class="auto-detailing-font-top"> AUTO
+                <span class="mobile-font-top"> MOBILE </span>
+                <span> DETAILING </span>
+              </span>
+            </a>
+          </div>
         </div>
-      </section>
+        <p> Family owned and operated since 2005, we strive to be the best Detailing service in all of Vancouver.
+        </p>
+      </div>
+
+      <div class="block-footer">
+        <h3> Navigation </h3>
+        <ul>
+          <li><a class="link" href="home.html">Home</a> </li>
+          <li><a class="link" href="services.html">Services</a> </li>
+          <li><a class="link" href="contact.html">Contact Us</a> </li>
+          <li><a class="link" href="checkout.html">Checkout</a> </li>
+        </ul>
+      </div>
+
+      <div class="block-footer">
+        <h3> Resources </h3>
+        <ul>
+          <li><a class="link" href="index.html"> Style Guide </a> </li>
+          <li><a class="link" href="citations.html"> Citations </a> </li>
+          <li><a class="link" href="https://github.com/Ajxy2/Iat-339-Team-11"> Github </a> </li>
+        </ul>
+      </div>
+
+      <div class="block-footer">
+        <h3> Newsletter Sign Up</h3>
+        <form method="post" action="#">
+          <label class="input-text-label" for="name"> Name </label>
+          <input class="input-text-contact-us" type="text" id="name" name="name">
+          <label class="input-text-label" for="email"> Email </label>
+          <input class="input-text-contact-us" type="text" id="email" name="email">
+          <div class="container-payment">
+            <input class="button-form" type="submit" value="Submit">
+          </div>
+        </form>
+      </div>
+    </div>
   </footer>
 </body>
