Edited detailed service views + updated style guide
Added an h3 heading above the paragraphs and changed the headings.

--- a/vacuum.html
+++ b/vacuum.html
@@ -52,11 +52,12 @@
 
   <section class="container-detailed-view">
     <div class="block-detailed-view">
-      <h2> What is it?</h2>
+      <h2> Service Overview </h2>
       <img src="images/int5.jpg" alt="vaccuum & shampoo wash seat">
     </div>
 
     <div class="block-detailed-view">
+      <h3> What is it? </h3>
       <p> Whether you need the hardest stains removed to cleaning up crumbs, we'll get your vechicles interior as if it was brand new. We pride ourselves with having the best Vaccuum & Shampoo service you can get.
       </p>
       <h3> Select your vehicle type: </h3>
