--- a/index.html
+++ b/index.html
@@ -457,11 +457,12 @@
     <h3> DETAILED SERVICE VIEW TEMPLATE </h3>
     <div class="container-detailed-view">
       <div class="block-detailed-view">
-        <h2> What is it?</h2>
+        <h2> Service Overview </h2>
         <img src="images/ext7.jpg" alt="before vs after wax and polish">
       </div>
 
       <div class="block-detailed-view">
+        <h3> What is it? </h3>
         <p> Our Wax & Polish service will make your vehicle's paint look brand new again, no matter how worn out and scratched it is. Our Detailers are highly trained and use only the best products on the market.
         </p>
         <h3> Select your vehicle type: </h3>
