--- a/vacuum.html
+++ b/vacuum.html
@@ -58,7 +58,7 @@
 
     <div class="block-detailed-view">
       <h3> What is it? </h3>
-      <p> Whether you need the hardest stains removed to cleaning up crumbs, we'll get your vechicles interior as if it was brand new. We pride ourselves with having the best Vaccuum & Shampoo service you can get.
+      <p> Whether you need the hardest stains removed to cleaning up crumbs, we'll get your vehicle's interior as if it was brand new. We pride ourselves with having the best Vacuum & Shampoo service you can get.
       </p>
       <h3> Select your vehicle type: </h3>
       <form method="get" action="#">
