--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
     <div class="block-contact-us">
       <h2>Drop us a message</h2>
       <h3> We're here to help </h3>
-      <p> We would love to address any inquires, questions, or concerns that you may have. Feel free to contact us using this form. We typically respond within two business days. </p>
+      <p> We would love to address any inquiries, questions, or concerns that you may have. Feel free to contact us using this form. We typically respond within two business days. </p>
       <h3> Question / comment is regarding: </h3>
       <form method="get" action="#">
         <input type="radio" id="ext-detail" name="type" value="ext-detail">
